removed actions, reducers

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": []
+    "baseUrl": "./",
+    "types": [
+      "firebase"
+    ]
   },
   "exclude": [
     "src/test.ts",
